--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -39,7 +39,7 @@
 .comment-tab{border-bottom: 1px solid #ddd;padding-left: 15px;margin-bottom: 10px;}
 .comment-tab a{float: left;}
 .comment-tab a.on{padding: 0 15px;background: #49afcd;color: #fff;border-radius:5px 5px 0 0;}
-/* config */
+/* com.yg.com.alipay.config */
 .config-items{margin-bottom: 25px;}
 .config-title{margin-bottom: 10px;}
 .config-title h1{font-size: 14px;font-weight: normal;}
