--- a/src/main/webapp/css/news.css
+++ b/src/main/webapp/css/news.css
@@ -10,7 +10,7 @@ body{
 }
 #header{
 	width: 100%;
-	height: 10%;
+	height: 15%;
 	padding: 5px 200px 0px;
 	background-color: white;
 }
@@ -25,17 +25,19 @@ body{
 }
 #menubar{
 	width: 100% ;
-	height: 10%;
+	height: 12%;
 	margin: 0px;
 	padding: 0px;
 	background-color:#008acd;
 }
 #menubar hr{
-	margin: 0px;
+	margin: 16px;
 }
 div.dropdown{
 	position: relative;
 	display: inline-block;
+	width: 100px;
+	height: 50px;
 	left: 20%;
 }
 button.dropbt{
@@ -43,7 +45,7 @@ button.dropbt{
 	background-color: #008acd;
     color:white;
     padding: 10px;
-    font-size: 15px;
+    font-size: 18px;
     border: none;
     cursor: pointer;
 }
