--- a/src/main/webapp/css/other.css
+++ b/src/main/webapp/css/other.css
@@ -8,11 +8,12 @@
 body,
 html {
     width: 100%;
-    height: 100%
+    height: 100%;
+
 }
 #header{
     width: 100%;
-    height: 10%;
+    height: 13%;
     padding: 5px 200px 0px;
     background-color: white;
 }
@@ -46,7 +47,7 @@ button.dropbt{
     background-color: #008acd;
     color:white;
     padding: 10px;
-    font-size: 15px;
+    font-size: 18px;
     border: none;
     cursor: pointer;
 }
@@ -93,7 +94,7 @@ button.logindropbt{
 }
 
 .wrap header {
-    height: 48px;
+    height: 75px;
     background-color: #008acb;
     width: 100%;
     display: flex;
@@ -139,7 +140,7 @@ button.logindropbt{
 
 .wrap .cont .nav {
     width: 100%;
-    height: 42px;
+    height: 50px;
     display: flex;
     align-items: center;
     border: 1px solid #d8dfe7;
@@ -154,6 +155,8 @@ button.logindropbt{
 .wrap .cont .flight {
     width: 100%;
     height: 114px;
+    text-align: center;
+    font-size: 25px;
     margin-top: 30px
 }
 
@@ -162,7 +165,7 @@ button.logindropbt{
     height: 100%;
     display: flex;
     align-items: center;
-    background-color: #f6fafc
+    background-color: #4dc0c3
 }
 
 .wrap .cont .flight ul li {
