--- a/src/main/webapp/css/other.css
+++ b/src/main/webapp/css/other.css
@@ -154,7 +154,8 @@ button.logindropbt{
 .wrap .cont .flight {
     width: 100%;
     height: 114px;
-    margin-top: 30px
+    margin-top: 30px;
+    font-size:16px
 }
 
 .wrap .cont .flight ul {
@@ -162,7 +163,7 @@ button.logindropbt{
     height: 100%;
     display: flex;
     align-items: center;
-    background-color: #f6fafc
+    background-color: #87c9ea
 }
 
 .wrap .cont .flight ul li {
